@@ -1085,6 +1085,16 @@ sub raw_kill {
         $Chakora::channel{$chn}{'members'} = $newmem;
     }
     event_kill( $user, $target, "(" . $args . ")" );
+    
+	if (defined $Chakora::uid{$user}) {
+		undef $Chakora::uid{$user};
+	}
+    if ($target eq svsUID("operserv")) {
+		serv_del("operserv");
+		my $modes = '+io';
+		if (defined $Chakora::PROTO_SETTINGS{god}) { $modes .= $Chakora::PROTO_SETTINGS{god}; }
+		serv_add('operserv', config( 'operserv', 'user' ), config( 'operserv', 'nick' ), config( 'operserv', 'host' ), $modes, config( 'operserv', 'real' ));
+	}
 }
 
 # Handle SVSNICK
